添加获取session信息函数

--- a/webapp/lib/regist.html
+++ b/webapp/lib/regist.html
@@ -74,7 +74,7 @@
 					<span class="red">*&nbsp;必填项</span>
 					</td>
           		 </tr>
-				 <tr>
+				 <tr class="hide">
 				 <th class="itemsearchth">请输入如图验证码：</th>
             		<td class="itemsearchtd1">
 						<input type="text" name="name" class="inputtext"/>
