--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -11,10 +12,10 @@
 <div id="container">
 	<div id="logalleft">
 		<div id="logalright">
-		<a href="#" onclick="load_regist();" target="_parent">[注册&nbsp;</a>] | 
-		<a href="#" id="load_login" onclick="load_login();" target="_parent">登录| 
-		<a href="user_edit.html" target="_parent">个人信息维护</a> | 
-		<a href="address_daohang.html" target="_parent">地址簿</a> |
+		<a href="#" onclick="load_regist();" target="_parent">注册</a>&nbsp;|
+        <a href="#" id="load_login" onclick="load_login();" target="_parent">登录</a>&nbsp;| 
+		<a href="user_edit.html" target="_parent">个人信息维护</a>&nbsp;| 
+		<a href="address_daohang.html" target="_parent">地址簿</a>&nbsp;|
 	 	<a href="home_nologin.html" target="_parent">退出</a>
 		</div>
 	</div>
