--- a/webapp/lib/regist.html
+++ b/webapp/lib/regist.html
@@ -1,6 +1,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <div id="sendnote_float_r">
-			<div id="sendnotehead"><strong>新用户注册</strong></div>
+			<div id="sendnotehead"><strong>新用户注册</strong><span class="close" onclick="close_float(this);"></span></div>
 			<div id="sendnotecontent">
 			<form action="" method="post" enctype="multipart/form-data" name="form1" onsubmit="return regist(this);">
 				<table id="itemsearch_r">
