--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -19,7 +19,7 @@
 					<input type="password" id="psaaword" class="inputtext hide" name="password" onblur="password_onblur(this)" value="" maxlength="20" >
                     <input type="test" class="inputtext_gray" onFocus="passwordtext_onfocus(this)" value="输入6至20位密码" >
 					</td>
-					<td class="itemsearchtd2"><a href="pwd_find.html"><span class="red">忘记密码？</span></a></td>
+					<td class="itemsearchtd2"></td>
                    </tr>
           		 <tr class="hide">
 				 <th class="itemsearchth">验证码：</th>
@@ -30,8 +30,12 @@
 					 <img  src="captcha_get_captcha" />	
 					</td>
           		 </tr>
-				 
-				
+				 <tr>
+                 <td></td>
+                 <td>
+                 <a href="pwd_find.html"><span class="red left_float">忘记密码？</span></a></td>
+                 <td></td>
+                 </tr>
 				 <tr>
 				 <th></th>
 				 	<td><input type="submit" name="button2" value="登陆" >
