--- a/webapp/cart_list.html
+++ b/webapp/cart_list.html
@@ -40,7 +40,7 @@
 				<img src="image/ico_site.jpg" id="ico_site"/>
 				网站路径：<a href="index.html">首页</a>&gt;&gt;<a href="#">购物车</a>			</div>
 			<div id="searchright2">
-			  <input type="text" name="product" id="textInput"/>
+			 <input type="text" name="quick_search" id="quick_search" class="gray" value="书名快速搜索...."onFocus="onfocus_check(this,'书名快速搜索....')" onblur="onblur_check(this,'书名快速搜索....')" />
 			  <input type="button" name="Submit" value="搜索" id="searchbutton" onClick="javascript:window.open('item_search_list.html','_parent','')">
 			</div>
 			<div id="searchright1">
