--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -4,7 +4,7 @@
 			<div id="sendnotecontent">
 
 			<form action="" method="post" enctype="multipart/form-data" name="form1" onsubmit="return login(this);">
-				<table id="itemsearch">
+				<table id="itemsearch_l">
 				   <tr>
 					<th class="itemsearchth" >用户名：</th>
             		<td class="itemsearchtd1">
