--- a/webapp/user.html
+++ b/webapp/user.html
@@ -24,12 +24,12 @@
 	<div id="globallink">
 		<ul>
 			<li><a href="index.html">首页</a></li>
-			<li><a href="item_search.html">商品搜索</a></li>
+			<li><a href="item_list.html">商品列表</a></li>
 			<li><a href="favorite.html">收藏夹</a></li>
 			<li><a href="address.html">地址簿</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
 			<li><a href="send_notes.html">送货说明</a></li>
-            <li><a href="credit_query.html">积分查询</a></li>
+            <li><a class="nouseful">&nbsp;</a></li>
 			<li><a class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
@@ -58,23 +58,87 @@
         <div class="user_left">
         <dl>
         <dt>编辑个人信息</dt>
-        <div><dd>浏览信息</dd></div>
-        <div><dd>修改密码</dd></div>
-        <div><dd>修改昵称</dd></div>
-        <div><dd>积分查询</dd></div>
+        <div onclick="show_user_con('1')"><dd>浏览信息</dd></div>
+        <div onclick="show_user_con('2')"><dd>修改密码</dd></div>
+        <div onclick="show_user_con('3')"><dd>修改昵称</dd></div>
+        <div onclick="show_user_con('4')"><dd>积分查询</dd></div>
         <br/>
         <dt></dt>
         </dl>
         </div>
-        <div class="user_note">
-        <div class="head"><strong>个人信息</strong></div>
+        <div id="1" class="user_note">
+        <div class="head"><strong>浏览信息</strong></div>
         <div class="user_note_content">
         	<p><span>用户名：</span>test@test.com</p>
             <p><span>昵&nbsp;&nbsp;&nbsp;称：</span>测试昵称</p>
             <p><span>现有积分：</span>300</p>
         </div>
         </div>
-		<div id="sendnote">
+        <div id="2" class="user_note hide">
+        <div class="head"><strong>修改密码</strong></div>
+        <div class="user_note_content">
+        <form>
+        	<p><span>原密码：</span><input class="inputtext"/></p>
+            <p><span>新密码：</span><input class="inputtext"/></p>
+            <p><span>密码确认：</span><input class="inputtext"/></p>
+            <p><span><input type="submit" value="确定修改"/></span></p>
+    	</form>
+        </div>
+        </div>
+        <div id="3" class="user_note hide">
+        <div class="head"><strong>个人信息</strong></div>
+        <div class="user_note_content">
+            <p><span>昵&nbsp;&nbsp;&nbsp;称：</span>测试昵称</p>
+            <p><span>修改昵称：</span><input class="inputtext"/></p>
+             <p><span><input type="submit" value="确定修改"/></span></p>
+        </div>
+        </div>
+        <div id="4" class="user_note hide">
+        <div class="head"><strong>积分详情</strong></div>
+        <div class="user_note_content">
+        	<table>
+				<thead>
+					<tr>
+						<th>订单号</th>
+						<th>下单时间</th>
+						<th>订单金额</th>
+						<th>获得积分</th>
+					</tr>
+				</thead>
+				<tbody>
+				  <tr>
+            		<td>
+						<a href="order_info.html">1483728</a>
+					</td>
+					<td>
+						2012-05-16 10:25:04
+					</td>
+					<td>
+						￥30.18
+					</td>
+					<td>
+						30
+					</td>
+          		  </tr>
+				  <tr>
+            		<td>
+						<a href="#">1483729</a>
+					</td>
+					<td>
+						2012-05-28 16:02:24
+					</td>
+					<td>
+						￥70.00
+					</td>
+					<td>
+						70
+					</td>
+          		  </tr>
+				 </tbody>
+            </table>
+        </div>
+        </div>
+		<!--<div id="sendnote">
 			<div id="sendnotehead"><strong> 个人信息修改</strong></div>
 			<div id="sendnotecontent">
 			<form action="" method="post" enctype="multipart/form-data" name="form1">
@@ -133,7 +197,7 @@
         </table>
 		</form>		
 			</div>
-
+</div>-->
 		
 	<div id="footer">
 		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
