登录页面修改

--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -4,6 +4,7 @@
 			<div id="sendnotecontent">
 
 			<form action="" method="post" enctype="multipart/form-data" name="form1" onsubmit="return login(this);">
+            <input name="toURL" value="index" style="display:none">
 				<table id="itemsearch_l">
 				   <tr>
 					<th class="itemsearchth" >用户名：</th>
