--- a/webapp/item_list.html
+++ b/webapp/item_list.html
@@ -171,6 +171,31 @@
 				
 			</div>
 		</div>
+        <div id="item_left">
+        <dl>
+        <dt>文学作品</dt>
+        <div ><dd>诗词歌曲</dd></div>
+        <div ><dd>中国文学</dd></div>
+        <div ><dd>儿童文学</dd></div>
+        <div ><dd>民间文学</dd></div>
+        <dt>金融与投资</dt>
+        <div ><dd>诗词歌曲</dd></div>
+        <div ><dd>中国文学</dd></div>
+        <div ><dd>儿童文学</dd></div>
+        <div ><dd>民间文学</dd></div>
+        <br/>
+        <dt></dt>
+        </dl>
+        </div>
+ <div class="user_note">
+ 	<div class="head"><strong>商品列表</strong></div>
+   <ul id="item_container">
+   		<li class="item"><a href="item_info.html"><img src="image/dxwl4.jpg"><br><span class="inputHeader">大学物理学.第四册：<br>波动与光学(第2版)<br>
+	     <strong>￥8.50</strong> 85折</span></li>
+         <li class="item"><a href="#"><img src="image/wj.jpg"><br><span class="inputHeader">美瑞贝尔皇冠★最新<br>韩版丝麻质感围巾<br>
+	     <strong>￥33.00</strong> 75折</span></li>
+   </ul>
+ </div>
  <div id="sendnote">
 			<div id="sendnotehead"><strong>商品列表</strong></div>
 			<div id="sendnotecontent">
