--- a/webapp/item_list.html
+++ b/webapp/item_list.html
@@ -30,7 +30,7 @@
 			<li><a class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+	<!--<div id="banner"></div>-->
 	<div id="main">
 		<div id="search2">
 			<div id="searchleft">
@@ -51,10 +51,28 @@
               </select>
 		  </div>
 		</div>
-		<div id="item_search">
-			<div id="item_search_head"><strong>商品搜索</strong></div>
-			<div id="item_search_content">
-				<table id="item_search_table">
+		
+        <div class="clear"></div>
+        <div id="item_left">
+        <dl>
+        <dt>文学作品</dt>
+        <div ><dd>诗词歌曲</dd></div>
+        <div ><dd>中国文学</dd></div>
+        <div ><dd>儿童文学</dd></div>
+        <div ><dd>民间文学</dd></div>
+        <dt>金融与投资</dt>
+        <div ><dd>诗词歌曲</dd></div>
+        <div ><dd>中国文学</dd></div>
+        <div ><dd>儿童文学</dd></div>
+        <div ><dd>民间文学</dd></div>
+        <br/>
+        <dt></dt>
+        </dl>
+        </div>
+        <div  class="user_note">
+			<div class="fliter"><font>商品搜索</font><span class="collapse"></span></div>
+			<div class="user_note_content">
+				<table>
 				<tr>
 					<th>书&nbsp;&nbsp;&nbsp;名：</th>
             		<td>
@@ -171,96 +189,38 @@
 				
 			</div>
 		</div>
-        <div id="item_left">
-        <dl>
-        <dt>文学作品</dt>
-        <div ><dd>诗词歌曲</dd></div>
-        <div ><dd>中国文学</dd></div>
-        <div ><dd>儿童文学</dd></div>
-        <div ><dd>民间文学</dd></div>
-        <dt>金融与投资</dt>
-        <div ><dd>诗词歌曲</dd></div>
-        <div ><dd>中国文学</dd></div>
-        <div ><dd>儿童文学</dd></div>
-        <div ><dd>民间文学</dd></div>
-        <br/>
-        <dt></dt>
-        </dl>
-        </div>
  <div class="user_note">
- 	<div class="head"><strong>商品列表</strong></div>
-   <ul id="item_container">
-   		<li class="item"><a href="item_info.html"><img src="image/dxwl4.jpg"><br><span class="inputHeader">大学物理学.第四册：<br>波动与光学(第2版)<br>
-	     <strong>￥8.50</strong> 85折</span></li>
-         <li class="item"><a href="#"><img src="image/wj.jpg"><br><span class="inputHeader">美瑞贝尔皇冠★最新<br>韩版丝麻质感围巾<br>
-	     <strong>￥33.00</strong> 75折</span></li>
-   </ul>
+ 	<!--<div class="head"><strong>商品列表</strong></div>-->
+   <div id="item_container">
+   <div class="fliter"></div>
+   <!--商品迭代div-->
+   <div class="item"><div class="p-img"><div class="i-img"><a target="_blank" href=""><img src="image/ssbs.jpg"></a></div></div><div class="dl"><div class="p-name"><a target="_blank" href="">BVLGARI Chinese-English Edn (PB)(宝格丽)</a></div>
+
+   <div class="p-info">作　　者：<a href="">Amanda Triossi（阿曼达·特廖西）</a> 著&nbsp;&nbsp;&nbsp;&nbsp;</div>
+   <div class="p-info">出&nbsp;版&nbsp;社：<a href="">SKIRA EDITORE</a>&nbsp;&nbsp;&nbsp;&nbsp;</div>
+   <div class="p-info"><span class="date-pub">出版时间：2011年09月</span><span class="fl">顾客评价：</span>(已有4人评价)</div>
+   <div class="p-info"><div class="mark-price">定　　价：<del>￥533.90</del></div>商城价：<strong>￥220.00</strong><span>（7.8折）</span></div>
+   <div class="btns"><div class="add_to_cart1"></div></div>
+   </div>
+   </div>
+   <!--商品迭代div---end-->
+   <!--商品迭代div-->
+   <div class="item"><div class="p-img"><div class="i-img"><a target="_blank" href=""><img src="image/ssbs.jpg"></a></div></div><div class="dl"><div class="p-name"><a target="_blank" href="">BVLGARI Chinese-English Edn (PB)(宝格丽)</a></div>
+
+   <div class="p-info">作　　者：<a href="">Amanda Triossi（阿曼达·特廖西）</a> 著&nbsp;&nbsp;&nbsp;&nbsp;</div>
+   <div class="p-info">出&nbsp;版&nbsp;社：<a href="">SKIRA EDITORE</a>&nbsp;&nbsp;&nbsp;&nbsp;</div>
+   <div class="p-info"><span class="date-pub">出版时间：2011年09月</span><span class="fl">顾客评价：</span>(已有4人评价)</div>
+   <div class="p-info"><div class="mark-price">定　　价：<del>￥533.90</del></div>商城价：<strong>￥220.00</strong><span>（7.8折）</span></div>
+   <div class="btns"><div class="add_to_cart1"></div></div>
+   </div>
+   </div>
+   <!--商品迭代div---end-->
+   </div>
  </div>
- <div id="sendnote">
-			<div id="sendnotehead"><strong>商品列表</strong></div>
-			<div id="sendnotecontent">
-				<table id="favorite">
-				<thead>
-					<tr>
-						<th>No.</th>
-						<th>商品图片</th>
-						<th>商品信息</th>
-					</tr>
-				</thead>
-				<tbody>
-				  <tr>
-            		<td>
-						<span>1</span>
-					</td>
-					<td>
-						<img src="image/dxwl4.jpg" class="picture1"/>
-					</td>
-					<td>
-						<span class="red">大学物理学.第四册：波动与光学（第2版）</span><br>
-						市场价：￥10.00<br>
-						会员价：￥8.50<br>
-						<a href="cart_list.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
-		<a href="favorite.html"><img src="image/put_to_collection.gif" alt="收藏" class="picture"></a>
-					</td>
-          		  </tr>
-				  				  <tr>
-            		<td>
-						<span>2</span>
-					</td>
-					<td>
-						<img src="image/dxwl1.jpg" class="picture1"/>
-					</td>
-					<td>
-						<span class="red">大学物理学.第一册：力学（第2版）</span><br>
-						市场价：￥16.00<br>
-						会员价：￥13.60<br>
-						<a href="cart_list.html"><img src="image/goumai.gif" alt="购买" class="picture"></a>&nbsp;
-		<a href="favorite.html"><img src="image/put_to_collection.gif" alt="收藏" class="picture"></a>
-					</td>
-          		  </tr>
-				  				  <tr>
-            		<td>
-						<span>3</span>
-					</td>
-					<td>
-						<img src="image/dxwl2.jpg" class="picture1"/>
-					</td>
-					<td>
-						<span class="red">大学物理学.第二册：热学（第2版）</span><br>
-						市场价：￥9.50<br>
-						会员价：￥8.08<br>
-						<span class="inputHeaderGrey">暂无法购买</span>&nbsp;
-		<a href="favorite.html"><img src="image/put_to_collection.gif" alt="收藏" class="picture"></a>
-					</td>
-          		  </tr>
-				 
-				 </tbody>
-            </table>	
-			</div>
-		</div>
-	<div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
+ 
+ <div id="footer">
+	  <span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
+	  <span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
 	</div>
 </div>
 
