后台页面及css小更改

--- a/webapp/admin/category_edit.html
+++ b/webapp/admin/category_edit.html
@@ -28,7 +28,7 @@
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+<!--	<div id="banner"></div>-->
     <div style="text-align:left; font-size:16px; background-color: #FFF"><span style="padding-right:20px;padding-left:2px;"><a href="category_list.html">[添加目录]</a></span><span style="padding-right:20px;padding-left:2px;"><a href="category_list.html">[目录列表]</a></span></div>
 	<div id="main">
 		<div id="search2">
