--- a/webapp/admin/index.html
+++ b/webapp/admin/index.html
@@ -49,35 +49,39 @@
 
 	</div>
 
-	<div id="banner"></div>
+	<!--<div id="banner"></div>-->
 	<div id="left">
 		<div id="categoryFixed">
 			<h4><span>后台首页</span></h4>
 			<ul>
-				<li><a href="item_list.html">后台首页</a></li>
+				<li><a href="index.html">后台首页</a></li>
 			
 			</ul>
 			<h4><span>销售管理</span></h4>
 			<ul>
-				<li><a href="#">查看销售情况</a></li>
-				<li><a href="#">销售量统计</a></li>
+				<li><a href="salesdata_admin.html">查询销售情况</a></li>
+				<li><a href="salesdata_list.html">销售量统计</a></li>
+			</ul>
+            <h4><span>目录管理</span></h4>
+			<ul>
+				<li><a href="category_list.html">编辑商品目录</a></li>
+                <li><a href="category_list.html">添加商品目录</a></li>             
 			</ul>
 			<h4><span>商品管理</span></h4>
 			<ul>
-				<li><a href="#">商品目录修改</a></li>
-                <li><a href="#">添加商品</a></li>
-				<li><a href="#">商品搜索</a></li>              
+                <li><a href="item_list.html">添加商品</a></li>
+                <li><a href="item_list.html">修改商品信息</a></li>
+				<li><a href="item_search.html">商品搜索</a></li>              
 			</ul>
 			<h4><span>订单管理</span></h4>
 			<ul>
-                <li><a href="#">订单审核</a></li>
-				<li><a href="#">查询订单</a></li>
-				<li><a href="#">修改订单</a></li>
+                <li><a href="order_list">订单审核</a></li>
+				<li><a href="order_admin.html">查询订单</a></li>
 			</ul>
             	<h4><span>会员管理</span></h4>
 			<ul>
-                <li><a href="#">查询会员</a></li>
-				<li><a href="#">设置会员等级规定</a></li>
+                <li><a href="user_admin.html">查询会员</a></li>
+				<li><a href="user_admin.html">设置会员等级规定</a></li>
 			</ul>
       </div>
 	</div>
