--- a/webapp/admin/item_search.html
+++ b/webapp/admin/item_search.html
@@ -43,7 +43,7 @@ return;
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+<!--	<div id="banner"></div>-->
 	<div id="main">
 		<div id="search2">
 			<div id="searchleft">
