--- a/webapp/admin/user_list.html
+++ b/webapp/admin/user_list.html
@@ -27,7 +27,7 @@
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+<!--	<div id="banner"></div>-->
     <div style="text-align:left; font-size:16px; background-color: #FFF""><span style="padding-right:20px;padding-left:2px;"><a href="item_list.html">[会员级别设置]</a></span><span style="padding-right:20px;padding-left:2px;"><a href="item_list.html">[会员查询]</a></span></div>
 	<div id="main">
 		<div id="search2">
