--- a/webapp/error.html
+++ b/webapp/error.html
@@ -31,7 +31,7 @@
 			<li><a class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+<!--	<div id="banner"></div>-->
      <div id="error">
 <TABLE cellSpacing=0 width=600 align=center border=0 cepadding="0">
   <TBODY>
