--- a/webapp/admin/item_list_refresh.html
+++ b/webapp/admin/item_list_refresh.html
@@ -97,7 +97,7 @@ else
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+	<!--<div id="banner"></div>-->
 	<div id="main">
 		<div id="search2">
 			<div id="searchleft">
