--- a/webapp/admin/order_info.html
+++ b/webapp/admin/order_info.html
@@ -34,7 +34,7 @@ document.form1.webUserEntity.phone="";
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+<!--	<div id="banner"></div>-->
 	<div id="main">
 		<div id="search2">
 			<div id="searchleft">
