--- a/webapp/admin/order_list.html
+++ b/webapp/admin/order_list.html
@@ -29,7 +29,7 @@
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+<!--	<div id="banner"></div>-->
     <div style="text-align:left; font-size:16px; background-color: #FFF""><span style="padding-right:20px;padding-left:2px;"><a href="order_list.html">[订单列表]</a></span><span style="padding-right:20px;padding-left:2px;"><a href="order_admin.html">[订单搜索]</a></span></div>
 	<div id="main">
 		<div id="search2">
