--- a/webapp/admin/price_admin.html
+++ b/webapp/admin/price_admin.html
@@ -25,7 +25,7 @@
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+<!--	<div id="banner"></div>-->
 	<div id="main">
 		<div id="search2">
 			<div id="searchleft">
