--- a/webapp/admin/salesdata_admin.html
+++ b/webapp/admin/salesdata_admin.html
@@ -31,7 +31,7 @@ document.form1.webUserEntity.order="";
 			<li><a href="" class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
-	<div id="banner"></div>
+<!--	<div id="banner"></div>-->
 	<div id="main">
 		<div id="search2">
 			<div id="searchleft">
@@ -39,17 +39,17 @@ document.form1.webUserEntity.order="";
 				网站路径：<a href="">销售量统计</a>
 			</div>
 		</div>
-		<div id="sendnote">
 			<div id="sendnotehead"><strong>销售量查询</strong></div>
 			<div id="sendnotecontent">
 				<form action="" method="post" enctype="multipart/form-data" name="form1">
 				<table id="tradequery">
 				   <tr>
 					<th>起始时间:&nbsp;</th>
-            		<td>
+            		<td width="80%">
 						<select name="year">
-              				<option>2007</option>
-              				<option>2006</option>
+              				<option>2012</option>
+              				<option>2011</option>
+                            <option>2010</option>
               			</select>
 						&nbsp;年&nbsp;
 						<select name="month">
@@ -59,25 +59,58 @@ document.form1.webUserEntity.order="";
               				<option>04</option>
 			  				<option>05</option>
               				<option>06</option>
+                            <option>07</option>
+             				<option>08</option>
+              				<option>09</option>
+              				<option>10</option>
+			  				<option>11</option>
+              				<option>12</option>
             			</select>
 						&nbsp;月&nbsp;
+                        
 						<select name="day">
               				<option>01</option>
               				<option>02</option>
               				<option>03</option>
               				<option>04</option>
 			  				<option>05</option>
-              				<option>06</option>              
+              				<option>06</option>
+                            <option>07</option>
+              				<option>08</option>
+              				<option>09</option>
+              				<option>10</option>
+			  				<option>11</option>
+              				<option>12</option> 
+                            <option>13</option>
+              				<option>14</option>
+              				<option>15</option>
+              				<option>16</option>
+			  				<option>17</option>
+              				<option>18</option> 
+                            <option>19</option>
+              				<option>20</option>
+              				<option>21</option>
+              				<option>22</option>
+			  				<option>23</option>
+              				<option>24</option>
+                            <option>25</option>
+              				<option>26</option>
+              				<option>27</option>
+              				<option>28</option>
+			  				<option>29</option>
+              				<option>30</option>
+                            <option>31</option>                
             			</select>
 						&nbsp;日
 					</td>
           		 </tr>
 				 <tr>
 				 <th>结束时间:&nbsp;</th>
-            		<td>
+            		<td width="80%">
 						<select name="year">
-              				<option>2007</option>
-              				<option>2006</option>
+              				<option>2012</option>
+              				<option>2011</option>
+                            <option>2010</option>
               			</select>
 						&nbsp;年&nbsp;
 						<select name="month">
@@ -87,15 +120,47 @@ document.form1.webUserEntity.order="";
               				<option>04</option>
 			  				<option>05</option>
               				<option>06</option>
+                            <option>07</option>
+             				<option>08</option>
+              				<option>09</option>
+              				<option>10</option>
+			  				<option>11</option>
+              				<option>12</option>
             			</select>
 						&nbsp;月&nbsp;
+                        
 						<select name="day">
               				<option>01</option>
               				<option>02</option>
               				<option>03</option>
               				<option>04</option>
 			  				<option>05</option>
-              				<option>06</option>              
+              				<option>06</option>
+                            <option>07</option>
+              				<option>08</option>
+              				<option>09</option>
+              				<option>10</option>
+			  				<option>11</option>
+              				<option>12</option> 
+                            <option>13</option>
+              				<option>14</option>
+              				<option>15</option>
+              				<option>16</option>
+			  				<option>17</option>
+              				<option>18</option> 
+                            <option>19</option>
+              				<option>20</option>
+              				<option>21</option>
+              				<option>22</option>
+			  				<option>23</option>
+              				<option>24</option>
+                            <option>25</option>
+              				<option>26</option>
+              				<option>27</option>
+              				<option>28</option>
+			  				<option>29</option>
+              				<option>30</option>
+                            <option>31</option>                
             			</select>
 						&nbsp;日
 					</td>
@@ -123,7 +188,6 @@ document.form1.webUserEntity.order="";
 				 </tr>
         </table>
 		</form>  		
-			</div>
 		</div>
 		
 	<div id="footer">
