--- a/webapp/item_list.html
+++ b/webapp/item_list.html
@@ -70,8 +70,8 @@
         </dl>
         </div>
         <div  class="user_note">
-			<div class="fliter"><font>商品搜索</font><span class="collapse"></span></div>
-			<div class="user_note_content">
+			<div class="fliter"><font>商品搜索</font><span class="collapse" onclick="show_item_search(this);"></span></div>
+			<div id="item_search1" class="user_note_content hide">
 				<table>
 				<tr>
 					<th>书&nbsp;&nbsp;&nbsp;名：</th>
@@ -194,7 +194,7 @@
    <div id="item_container">
    <div class="fliter"></div>
    <!--商品迭代div-->
-   <div class="item"><div class="p-img"><div class="i-img"><a target="_blank" href=""><img src="image/ssbs.jpg"></a></div></div><div class="dl"><div class="p-name"><a target="_blank" href="">BVLGARI Chinese-English Edn (PB)(宝格丽)</a></div>
+   <div class="item"><div class="p-img"><div class="i-img"><a  href="item_info.html"><img src="image/ssbs.jpg"></a></div></div><div class="dl"><div class="p-name"><a target="_blank" href="">BVLGARI Chinese-English Edn (PB)(宝格丽)</a></div>
 
    <div class="p-info">作　　者：<a href="">Amanda Triossi（阿曼达·特廖西）</a> 著&nbsp;&nbsp;&nbsp;&nbsp;</div>
    <div class="p-info">出&nbsp;版&nbsp;社：<a href="">SKIRA EDITORE</a>&nbsp;&nbsp;&nbsp;&nbsp;</div>
