--- a/webapp/admin/index.html
+++ b/webapp/admin/index.html
@@ -48,7 +48,27 @@
 		</ul>
 
 	</div>
-
+   <!-- <div class="clear"></div>
+   
+        <div id="item_left">
+         <div id="categoryFixed">
+        <dl>
+        <dt>文学作品</dt>
+        <div ><dd>诗词歌曲</dd></div>
+        <div ><dd>中国文学</dd></div>
+        <div ><dd>儿童文学</dd></div>
+        <div ><dd>民间文学</dd></div>
+        <dt>金融与投资</dt>
+        <div ><dd>诗词歌曲</dd></div>
+        <div ><dd>中国文学</dd></div>
+        <div ><dd>儿童文学</dd></div>
+        <div ><dd>民间文学</dd></div>
+        <br/>
+        <dt></dt>
+        </dl>
+        </div>
+        </div>
+-->
 	<!--<div id="banner"></div>-->
 	<div id="left">
 		<div id="categoryFixed">
@@ -143,7 +163,7 @@
                     <td id="myfont" ><span class="redStrong">16</span>个</td>
                 </tr> 
                  <tr> 
-                   <td id="myfont" width = "60%">审核订单:&nbsp;&nbsp;</td> 
+                   <td id="myfont" width = "70%">待审核订单:&nbsp;&nbsp;</td> 
                     <td id="myfont" ><span class="redStrong">13</span>个</td>
                 </tr> 
                  <tr> 
@@ -178,7 +198,7 @@
         </td>
         </tr>
         </table>-->
-        <div id="bgWhite">
+        <div id="bgWhite" >
    			<form action="" method="post" enctype="multipart/form-data" name="form1">
 				<table id="latestOrder" align="left">
 
@@ -219,7 +239,7 @@
 
 					<td class="qWidth">2007-10-01&nbsp;10:25:04</td>
 
-					<td class="qWidth">交易成功</td>
+					<td class="autoWidth">交易成功</td>
  <td><a href="order_info.html" style="display:none"><img src="../image/xq.gif" alt="详情" class="picture"></a><a href="order_info.html">详情</a>&nbsp;</td>
 
 
