--- a/webapp/admin/login.html
+++ b/webapp/admin/login.html
@@ -13,24 +13,13 @@
 		<div id="logalright">
 		</div>
 	</div>
-	<div id="globallink">
-		<ul>
-			<li><a href="index.html">首页</a></li>
-                        <li><a href="category_list.html">目录管理</a></li>
-			<li><a href="item_list.html">商品管理</a></li>
-			<li><a href="order_admin.html">订单管理</a></li>
-			<li><a href="salesdata_admin.html">销售量统计</a></li>
-			<li><a href="user_admin.html">会员管理</a></li>
-			<li><a href="comment_list.html">评论管理</a></li>
-			<li><a href="" class="nouseful">&nbsp;</a></li>
-		</ul>
-	</div>
+	
 <!--	<div id="banner"></div>-->
 	<div id="main">
 		<div id="search2">
 			<div id="searchleft">
 				<img src="../image/ico_site.jpg"  id="ico_site"/>
-				网站路径：<a href="index.html">首页</a>&gt;&gt;<a href="">管理员登录</a>
+				网站路径：</a>&gt;&gt;<a href="">管理员登录</a>
 			</div>
 		</div>
 		<div id="sendnote">
@@ -75,53 +64,10 @@
 		</form>		
 			</div>
 		</div>
-	<div id="sendnote">
-			<div id="sendnotehead"><strong> 管理员信息修改</strong></div>
-			<div id="sendnotecontent">
-			<form action="" method="post" enctype="multipart/form-data" name="form1">
-				<table id="itemsearch">
-				
-				 <tr>
-				 <th class="itemsearchth">原&nbsp;密&nbsp;码：</th>
-            		<td class="itemsearchtd1">
-					  	<input type="Password" class="inputtext" name="passwordold" onFocus="nextfield='name'" value="" maxlength="25">
-					</td>
-					<td class="itemsearchtd2">
-						<span class="red">*&nbsp;必填项</span>
-					</td>
-          		 </tr>
-				 <tr>
-				 <th class="itemsearchth">新&nbsp;密&nbsp;码：</th>
-            		<td class="itemsearchtd1">
-					<input type="Password" class="inputtext" name="passwordnew" onFocus="nextfield='name'" value="" maxlength="25">   
-					</td>
-					<td class="itemsearchtd2">
-						<span class="red">*&nbsp;必填项</span>
-					</td>
-          		 </tr>
-				 <tr>
-				 <th class="itemsearchth">密码确认：</th>
-            		<td class="itemsearchtd1">
-	              <input type="Password" class="inputtext" name="passwordConfirm" onFocus="nextfield='sex'" value="" maxlength="25"> 
-					</td>
-					<td class="itemsearchtd2">
-						<span class="red">*&nbsp;必填项</span>
-					</td>
-          		 </tr>
-				 <tr>
-				 <th></th>
-				 	<td><input type="Button" name="button2" value="提交" onClick="checkinfoeditform()">
-						&nbsp;<input type="Reset" name="button1" value="重填" onClick="clear()">
-						&nbsp;<input type="Button" name="button3" value="返回" onClick="javascript:window.location.href='home.html'">
-					</td>
-				 </tr>
-        </table>
-		</form>		
-			</div>
-		</div>
+	
 	<div id="footer">
-		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：admin@163.com </span>
-		<span id="footerright"> B2C商城  Power by IBM &nbsp;</span>
+		<span id="footerleft"> &nbsp;隐私权 | 版权 | 法律声明 | 电子邮件：Symagics@gmail.com </span>
+		<span id="footerright"> Symagic网上商城  Power by Symagic &nbsp;</span>
 	</div>
 </div>
 
