物品详情页面修改

--- a/webapp/cart_list.html
+++ b/webapp/cart_list.html
@@ -126,7 +126,7 @@
 						<td></td>
 						<td></td>
 					<td>
-					<a href="account_check.html"><img src="image/check_account.gif" class="picture"/></a>				  					</td>
+					<a href="order_confirm.html"><img src="image/check_account.gif" class="picture"/></a>				  					</td>
 					</tr>
 				 </tbody>
             </table>
