--- a/webapp/item_info.html
+++ b/webapp/item_info.html
@@ -5,31 +5,31 @@
 
 <title>BC2商城</title>
 <link href="css/frame.css" rel="stylesheet" type="text/css">
-   <script type="text/javascript" src="js/yf_ADS.js"></script>
+<link href="css/item_info.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/yf_ADS.js"></script>
+<script type="text/javascript" src="js/item_info.js"></script>
 </head>
 
 <body>
 <div id="container">
+<div id="cart" ><span class="cart_loading"></span></div>
 	<div id="logalleft">
-		<div id="logalright">
-		<a href="register.html" target="_parent">[注册&nbsp;</a>] | 
-		<a href="" target="_parent">王小静 已登录| 
-		<a href="user_edit.html" target="_parent">个人信息维护</a> | 
-		<a href="address_daohang.html" target="_parent">地址簿</a> |
-	 	<a href="home_nologin.html" target="_parent">退出</a>
+		<div id="logalright"><li><a href="#" onclick="load_regist();" >注册</a>&nbsp;</li>|<li> <a href="#" id="load_login" onclick="load_login();" >登录</a>&nbsp;</li>|
+		<li> <a  href="user.html" target="_parent">个人信息</a>&nbsp;</li>|<li id="cart_li"> 
+		<a id="cart_a"  href="cart_list.html" target="_parent">购物车 <strong id="cart_num">0</strong> 件</a>&nbsp;</li>|<li> <a href="#" target="_parent">退出</a></li>
 		</div>
 	</div>
 	<div id="globallink">
 		<ul>
 			<li><a href="index.html">首页</a></li>
-			<li><a href="credit_query.html">积分查询</a></li>
-			<li><a href="item_search.html">商品搜索</a></li>
+			<li><a href="item_list.html">商品列表</a></li>
 			<li><a href="favorite.html">收藏夹</a></li>
-			<li><a href="cart_list.html">我的购物车</a></li>
+			<li><a href="address.html">地址簿</a></li>
 			<li><a href="tradequery.html">交易查询</a></li>
 			<li><a href="send_notes.html">送货说明</a></li>
-			<li><a href="" class="nouseful">&nbsp;</a></li>
+            <li><a class="nouseful">&nbsp;</a></li>
+			<li><a class="nouseful">&nbsp;</a></li>
 		</ul>
 	</div>
 <!--	<div id="banner"></div>-->
@@ -53,6 +53,75 @@
               </select>
 		  </div>
 		</div>
+        <div class="clear"></div>
+        <!--购买推荐左边栏-->
+        <div class="recommend">
+        <div class="head"><h3>购买本书的顾客还购买了</h3></div>
+        <!----推荐迭代li---->
+       <li><div class="p-img"><a href="" title="数学之美" target="_blank"><img width="50" height="50" src="upload/linux.jpg"></a></div>						 		<div class="p-name"><a href="" >高性能Linux服务器构建实战</a></div>
+       <div class="p-price"><strong>￥30.00</strong></div></li>
+       <!----推荐迭代li结束---->
+        <!----推荐迭代li---->
+       <li><div class="p-img"><a href="" title="数学之美" target="_blank"><img width="50" height="50" src="upload/linux.jpg"></a></div>						 		<div class="p-name"><a href="" >高性能Linux服务器构建实战</a></div>
+       <div class="p-price"><strong>￥30.00</strong></div></li>
+       <!----推荐迭代li结束---->
+        <!----推荐迭代li---->
+       <li><div class="p-img"><a href="" title="数学之美" target="_blank"><img width="50" height="50" src="upload/linux.jpg"></a></div>						 		<div class="p-name"><a href="" >高性能Linux服务器构建实战</a></div>
+       <div class="p-price"><strong>￥30.00</strong></div></li>
+       <!----推荐迭代li结束---->
+        <!----推荐迭代li---->
+       <li><div class="p-img"><a href="" title="数学之美" target="_blank"><img width="50" height="50" src="upload/linux.jpg"></a></div>						 		<div class="p-name"><a href="" >高性能Linux服务器构建实战</a></div>
+       <div class="p-price"><strong>￥30.00</strong></div></li>
+       <!----推荐迭代li结束---->
+        <!----推荐迭代li---->
+       <li><div class="p-img"><a href="" title="数学之美" target="_blank"><img width="50" height="50" src="upload/linux.jpg"></a></div>						 		<div class="p-name"><a href="" >高性能Linux服务器构建实战</a></div>
+       <div class="p-price"><strong>￥30.00</strong></div></li>
+       <!----推荐迭代li结束---->
+        <!----推荐迭代li---->
+       <li><div class="p-img"><a href="" title="数学之美" target="_blank"><img width="50" height="50" src="upload/linux.jpg"></a></div>						 		<div class="p-name"><a href="" >高性能Linux服务器构建实战</a></div>
+       <div class="p-price"><strong>￥30.00</strong></div></li>
+       <!----推荐迭代li结束---->
+        </div>
+        <!--购买推荐左边栏结束-->
+        <!--商品详细信息-->
+        <div class="item_info">
+        <div class="fliter"></div>
+        <div class="name"><h2>大学物理学.第四册：波动与光学（第2版）</h2></div>
+        <div id="preview">
+        <div id="spec-n1"><img src="upload/linux.jpg"/></div>
+        <ul>
+        <li><span>评分：</span><span class="star"><span class="sa45"></span></span></li>
+        </ul>
+        </div>
+        <ul id="summary">
+        <li><span>作&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;者：</span>张嗣音</li>
+        <li><span>出&nbsp;&nbsp;版&nbsp;&nbsp;社：</span>清华大学出版社</li>
+        <li><span>I&nbsp;&nbsp;S&nbsp;&nbsp;B&nbsp;&nbsp;N：</span>34516661722838</li>
+        <li><span>出版日期：</span>2011-11-11</li>
+        <li><span>版&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;次：</span>2</li>
+        <li><span>开&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本：</span>16开</li>
+        <li><span>装&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;帧：</span>平装</li>
+        <li><span>纸&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;张：</span>胶印纸</li>
+        <li><span>语&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;种：</span>中文</li>
+        </ul>
+        <ul id="book_price">
+        <li><span>定&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;价：</span><del>￥9.50</del></li>
+        <li><span>商&nbsp;&nbsp;城&nbsp;&nbsp;价：</span><strong>￥8.08</strong></li>
+        <li><span>为您节省：</span><strong>￥1.42</strong></li>
+        </ul>
+        <div id="add_to_cart">
+        <div id="item_amount">
+        <span id="buy_num">购买数量：</span><span><a class="reduce" onclick="reduce();" href="javascript:void(0)">-</a>
+        <input type="text" value="1" id="amount" onkeyup="amount_modify(this)">
+        <a class="reduce" onclick="add();" href="javascript:void(0)">+</a>
+        </span></div>
+        <div class="btns">
+					<a onclick="add_to_cart()" href="javascript:void(0)" class="append" ></a><a onclick="favorite()" href="javascript:void(0)" class="favorite"></a>
+					<div class="clear"></div>
+				</div>
+        
+        </div>
+        </div>
 		<div id="sendnote">
 			<div id="sendnotehead"><strong>商品信息</strong></div>
 			<div id="sendnotecontent">
@@ -83,7 +152,7 @@
           <td>会员价：￥8.08</td>
 		  <td>节省：￥1.42</td>
 		  <td>库存量：10</td>
-		  <td>用户评分：<img src="image/4star.JPG" alt="喜欢" class="picture"></td>
+		  <td>用户评分：</td>
         </tr>
 		<tr>
 		  <td></td>
