--- a/webapp/lib/login.html
+++ b/webapp/lib/login.html
@@ -1,6 +1,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <div id="sendnote_float">
-			<div id="sendnotehead"><strong>会员登录</strong><span class="close" onclick="close_float(this);"></span></div>
+			<div id="sendnotehead">会员登录<span class="close" onclick="close_float(this);"></span></div>
 			<div id="sendnotecontent">
 
 			<form action="" method="post" enctype="multipart/form-data" name="form1" onsubmit="return login(this);">
