--- a/webapp/regist.html
+++ b/webapp/regist.html
@@ -86,7 +86,7 @@
 				 <tr>
 				 <th class="itemsearchth"><span class="red">*</span>密码确认：</th>
             		<td class="itemsearchtd1">
-					<input type="password" id="psaaword_confirm" class="inputtext hide" name="password_confirm" onblur="password_onblur(this)" value="" maxlength="20" >
+					<input type="password" id="psaawordConfirm" class="inputtext hide" name="password_confirm" onblur="password_onblur(this)" value="" maxlength="20" >
                     <input type="text" class="inputtext_gray" onFocus="passwordtext_onfocus(this)" value="输入6至20位密码" msg_num="">
 					</td>
 					<td class="itemsearchtd2">
@@ -95,7 +95,7 @@
                   <tr>
 				 <th class="itemsearchth"><span class="red">*</span>安全提问问题：</th>
             		<td class="itemsearchtd1">
-					  	<select onchange="safe_question(this)" name="security_question">
+					  	<select onchange="safe_question(this)" name="securityQuestion">
                         <option >您父亲的名字是？</option>
                         <option >您母亲的名字是？</option>
                         <option >您小学就读的学校是？</option>
@@ -118,7 +118,7 @@
                  <tr>
 				 <th class="itemsearchth"><span class="red">*</span>安全问题答案：</th>
             		<td class="itemsearchtd1">
-					<input type="text" name="security_answer" class="inputtext" msg_num=""/>
+					<input type="text" name="securityAnswer" class="inputtext" msg_num=""/>
 					</td>
 					<td class="itemsearchtd2">
 					</td>
@@ -126,7 +126,7 @@
 				 <tr class="">
 				 <th class="itemsearchth"><span class="red">*&nbsp;</span>验证码：</th>
             		<td class="itemsearchtd1">
-						<input type="text" name="captcha_value" class="inputtext" msg_num=""/>
+						<input type="text" name="captchaValue" class="inputtext" msg_num=""/>
 					</td>
 					<td>
 					 <img  src="captcha_get_captcha" />	
